nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: default
spec:
  rules:
  - host: rp4-kato.local  # ← ここで好きなドメインを決めます
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service # さっき作ったServiceの名前
            port:
              number: 80 # Serviceが受け付けているポート
